src/assets/styles/ministries.css
.central {
  --theme: var(--central-ministry-colour);
  --theme-accent: rgb(255, 255, 255);
  --theme-accent-alt: rgb(0, 0, 0);
}

.food {
  --theme: var(--ministry-of-food-colour);
  --theme-accent: rgb(0, 0, 0);
  --theme-accent-alt: rgb(255, 255, 255);
}

.foreign-affairs {
  --theme: var(--ministry-of-foreign-affairs-colour);
  --theme-accent: rgb(255, 255, 255);
  --theme-accent-alt: rgb(0, 0, 0);
}

.health {
  --theme: var(--ministry-of-health-colour);
  --theme-accent: rgb(255, 255, 255);
  --theme-accent-alt: rgb(0, 0, 0);
}

.finance {
  --theme: var(--ministry-of-finance-colour);
  --theme-accent: rgb(255, 255, 255);
  --theme-accent-alt: rgb(0, 0, 0);
}

.immigration {
  --theme: var(--ministry-of-immigration-colour);
  --theme-accent: rgb(255, 255, 255);
  --theme-accent-alt: rgb(0, 0, 0);
}

.technology {
  --theme: var(--ministry-of-technology-colour);
  --theme-accent: rgb(0, 0, 0);
  --theme-accent-alt: rgb(255, 255, 255);
}

.defence {
  --theme: var(--ministry-of-defence-colour);
  --theme-accent: rgb(0, 0, 0);
  --theme-accent-alt: rgb(255, 255, 255);
}

/* MINISTRY THEMES ABOVE */

.header {
  background-color: var(--theme);
  padding: 1rem 5rem;
  display: flex;
  justify-content: flex-start;
}

.logo-text {
  color: var(--theme-accent);
  font-size: 1.5rem;
  text-decoration: none;
}

.logo-text.bottom {
  margin-top: -0.2rem;
  font-weight: 400;
}

.logo-frame {
  padding: 0 5rem;
  aspect-ratio: 3.6 / 1;
}

.hero {
  background-color: var(--theme);
  color: var(--theme-accent);
}

.hero-title {
  font-size: 4rem;
  margin-bottom: 1rem;
}

.hero-text {
  font-size: 2rem;
}

section:not(.content, footer section) {
  padding: 2rem 5rem;
}

.heading {
  font-size: 4rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.heading::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 50%;
}

@keyframes wipe-up {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(200%);
  }
}

.section-divider {
  min-width: 0;
  width: 100%;
  height: 10px;
  background-color: var(--theme);
  margin-bottom: 3rem;
  transform-origin: left;
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 30%;
}

@keyframes wipe-right {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

.ministers.list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 4rem;
}

.minister {
  display: flex;
  flex-direction: column;
  width: 600px;
  height: auto;
}

.minister.picture {
  background-size: contain;
  width: 600px;
  height: 800px;
  animation: scale-out ease-out backwards;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 40%;
}

@keyframes scale-out {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

/* MINISTER PHOTOS BEGIN */
#pbb {
  background-image: url('../pictures/ministers/pbb.webp');
}

#apb {
  background-image: url('../pictures/ministers/apb.webp');
}

#capybara {
  background-image: url('../pictures/ministers/capybara.webp');
}

#paddington {
  background-image: url('../pictures/ministers/paddington.webp');
}

#som-ting-wong {
  background-image: url('../pictures/ministers/som-ting-wong.webp');
}

#ho-lee-fook {
  background-image: url('../pictures/ministers/ho-lee-fook.webp');
}

#cimb-octo {
  background-image: url('../pictures/ministers/cimb-octo.webp');
}

#pikachu {
  background-image: url('../pictures/ministers/pikachu.webp');
}

#blinky {
  background-image: url('../pictures/ministers/blinky.webp');
}

#android {
  background-image: url('../pictures/ministers/android.webp');
}

#kodee {
  background-image: url('../pictures/ministers/kodee.webp');
}

#stitch {
  background-image: url('../pictures/ministers/stitch.webp');
}
/* MINISTER PHOTOS END */

.minister.info-box {
  padding: 0 1rem;
  background-color: transparent;
  position: relative;
}

.minister.info-box::before {
  content: '';
  position: absolute;
  inset: 0;
  clip-path: inset(0 0 100% 0);
  border: 10px solid var(--theme);
  border-top: none;
  animation: wipe-down ease both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 25%;
}

@keyframes wipe-down {
  0% {
    clip-path: inset(0 0 100% 0);
  }
  100% {
    clip-path: inset(0 0 0 0);
  }
}

.minister.name {
  font-size: 3rem;
}

.minister.job-title {
  font-size: 2rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
}

.title {
  font-size: 2.5rem;
}

.text {
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

.return {
  padding: 1rem 2rem;
  font-size: 2rem;
  font-family: var(--mona-sans);
  color: black;
  background-color: transparent;
  display: flex;
  max-width: fit-content;
  margin: 1rem auto 4rem auto;
  box-shadow: inset 0 0 0 0px var(--theme);
  border: 16px solid var(--theme);
  transition:
    box-shadow 0.4s ease-in-out,
    color 0.4s ease-in-out;
  will-change: box-shadow, color;
}

.return:hover {
  box-shadow: inset 0 0 0 400px var(--theme);
  color: var(--theme-accent);
}

footer {
  margin-top: 2rem;
  padding: 2rem 5rem 3rem 5rem;
  background-color: var(--theme);
  color: var(--theme-accent);
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem;
}

.footer-title {
  font-size: 2.5rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.footer-title::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: var(--theme);
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 5%;
  animation-range-end: cover 35%;
}

.footer-divider {
  width: 100%;
  height: 10px;
  background-color: var(--theme-accent);
  margin-bottom: 1rem;
  transform-origin: left;
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 40%;
}

.footer-ministries.links {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: fit-content;
  row-gap: 0.5rem;
  column-gap: 1rem;
}

.footer-resources.links,
.footer-about.links {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

footer .link {
  color: var(--theme-accent);
  font-size: 1.2rem;
  position: relative;
  overflow: hidden;
  isolation: isolate;
}

footer .link::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: var(--theme-accent);
  width: 100%;
  height: 100%;
  transform-origin: left;
  z-index: -1;
  transform: translateX(-110%);
  transition: transform 0.2s ease-out;
}

footer .link:hover::before {
  transform: translateX(0%);
}

footer .link:hover {
  color: var(--theme-accent-alt);
}

.small-text {
  font-size: 1rem;
}

/* MEDIA QUERIES BELOW */
@media (max-width: 600px) {
  .header,
  section:not(.content, footer section) {
    padding: 1rem 2rem;
  }
  .logo-frame {
    padding: 0;
    aspect-ratio: 3 / 1;
  }
  .hero-title {
    font-size: 2.5rem;
  }
  .hero-text {
    font-size: 1.5rem;
    margin-bottom: 2rem;
  }
  .heading {
    font-size: 2rem;
  }
  .ministers.heading::before {
    animation-range-start: cover 35%;
    animation-range-end: cover 65%;
  }
  .ministers .section-divider {
    animation-range-start: cover 25%;
    animation-range-end: cover 45%;
  }
  .section-divider {
    margin-bottom: 1rem;
    animation-range-start: cover 0%;
    animation-range-end: cover 20%;
  }
  .minister {
    width: 100%;
  }
  .minister.picture {
    width: 100%;
    height: auto;
    aspect-ratio: 3 / 4;
  }
  .minister.info-box::before {
    animation-range-start: cover 0%;
    animation-range-end: cover 20%;
  }
  .minister.name {
    font-size: 1.5rem;
  }
  .minister.job-title {
    font-size: 1rem;
    margin-bottom: 1rem;
  }
  .title {
    font-size: 1.5rem;
  }
  .text {
    font-size: 1rem;
    line-height: 1.5;
  }
  .small-text {
    font-size: 0.5rem;
  }
  .return {
    font-size: 1.5rem;
  }
  footer {
    flex-direction: column;
    flex-wrap: nowrap;
    padding: 2rem 3rem 3rem 3rem;
  }
  .footer-divider {
    animation-range-start: cover 0%;
    animation-range-end: cover 10%;
  }
  footer .link {
    font-size: 1rem;
  }
}
/* MEDIA QUERIES ABOVE */

